--- a/main/plugins/org.talend.hadoop.distribution.emr550/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.emr550/plugin.xml
@@ -201,19 +201,19 @@
             mvn_uri="mvn:org.talend.libraries/piggybank-emr550/6.0.0"/>
 
         <libraryNeeded
-            context="plugin:org.talend.libraries.pig"
+            context="plugin:org.talend.hadoop.distribution.emr550"
             id="elephant-bird-core-4.9.jar"
             name="elephant-bird-core-4.9.jar"
             mvn_uri="mvn:com.twitter.elephantbird/elephant-bird-core/4.9"/>
             
         <libraryNeeded
-            context="plugin:org.talend.libraries.pig"
+            context="plugin:org.talend.hadoop.distribution.emr550"
             id="elephant-bird-hadoop-compat-4.9.jar"
             name="elephant-bird-hadoop-compat-4.9.jar"
             mvn_uri="mvn:com.twitter.elephantbird/elephant-bird-hadoop-compat/4.9"/>
             
         <libraryNeeded
-            context="plugin:org.talend.libraries.pig"
+            context="plugin:org.talend.hadoop.distribution.emr550"
             id="elephant-bird-rcfile-4.9-patched-hive-1.x.jar"
             name="elephant-bird-rcfile-4.9-patched-hive-1.x.jar"
             mvn_uri="mvn:org.talend.libraries/elephant-bird-rcfile-4.9-patched-hive-1.x/6.0.0"/>
@@ -225,14 +225,14 @@
         	mvn_uri="mvn:org.talend.libraries/javax.ws.rs-api-2.0.1/6.0.0"/>
 
         <libraryNeeded
-            context="plugin:org.talend.libraries.pig"
+            context="plugin:org.talend.hadoop.distribution.emr550"
             id="elephant-bird-pig-4.9.jar"
             name="elephant-bird-pig-4.9.jar"
             mvn_uri="mvn:com.twitter.elephantbird/elephant-bird-pig/4.9">            
         </libraryNeeded>
 
         <libraryNeeded
-            context="plugin:org.talend.libraries.pig"
+            context="plugin:org.talend.hadoop.distribution.emr550"
             id="pigutil.jar"
             name="pigutil.jar"
             mvn_uri="mvn:org.talend.libraries/pigutil/6.0.0">            
