--- a/main/plugins/org.talend.hadoop.distribution.qubole/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.qubole/plugin.xml
@@ -27,13 +27,13 @@
 
 		<!-- Talend nexus jars -->
         <libraryNeeded
-            context="plugin:org.talend.libraries.pig"
+            context="plugin:org.talend.hadoop.distribution.qubole"
             id="pigutil.jar"
             name="pigutil.jar"
             mvn_uri="mvn:org.talend.libraries/pigutil/6.0.0">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.libraries.pig"
+            context="plugin:org.talend.hadoop.distribution.qubole"
             id="elephant-bird-rcfile-4.9-patched-hive-1.x.jar"
             name="elephant-bird-rcfile-4.9-patched-hive-1.x.jar"
             mvn_uri="mvn:org.talend.libraries/elephant-bird-rcfile-4.9-patched-hive-1.x/6.0.0">
@@ -70,19 +70,19 @@
 			mvn_uri="mvn:com.twitter.elephantbird/elephant-bird-pig/4.9">
 		</libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.libraries.pig"
+            context="plugin:org.talend.hadoop.distribution.qubole"
             id="hive-common-1.1.0.jar"
             name="hive-common-1.1.0.jar"
             mvn_uri="mvn:org.apache.hive/hive-common/1.1.0">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.libraries.pig"
+            context="plugin:org.talend.hadoop.distribution.qubole"
             id="hive-exec-1.1.0.jar"
             name="hive-exec-1.1.0.jar"
             mvn_uri="mvn:org.apache.hive/hive-exec/1.1.0">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.libraries.pig"
+            context="plugin:org.talend.hadoop.distribution.qubole"
             id="hive-serde-1.1.0.jar"
             name="hive-serde-1.1.0.jar"
             mvn_uri="mvn:org.apache.hive/hive-serde/1.1.0">
