--- a/podTemplate.yaml
+++ b/podTemplate.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 spec:
   containers:
-    - name: python
+    - name: python2
       image: jenkinsxio/builder-python2
       command:
         - cat
