--- a/test/plugins/org.talend.hadoop.distribution.dataproc14.test/pom.xml
+++ b/test/plugins/org.talend.hadoop.distribution.dataproc14.test/pom.xml
@@ -8,5 +8,9 @@
     <relativePath>../../../</relativePath>
   </parent>
   <artifactId>org.talend.hadoop.distribution.dataproc14.test</artifactId>
-  <packaging>eclipse-plugin</packaging>
+  <packaging>eclipse-test-plugin</packaging>
+  <build>
+    <sourceDirectory>src</sourceDirectory>
+    <outputDirectory>bin</outputDirectory>
+  </build>
 </project>
