fix(TBD-9569): tFileStreamInputParquet compile error on Databricks

--- a/main/plugins/org.talend.hadoop.distribution.dbr350/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.dbr350/plugin.xml
@@ -223,6 +223,12 @@
             id="jackson-annotations-2.8.9.jar"
             name="jackson-annotations-2.8.9.jar"
             mvn_uri="mvn:com.fasterxml.jackson.core/jackson-annotations/2.8.9"/>
+            
+         <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.dbr350"
+            id="parquet-hadoop-bundle-1.6.0.jar"
+            name="parquet-hadoop-bundle-1.6.0.jar"
+            mvn_uri="mvn:com.twitter/parquet-hadoop-bundle/1.6.0"/>
 
         <!-- Big Data launcher group -->
         <libraryNeededGroup
@@ -267,6 +273,7 @@
              <library id="jackson-core-2.8.9.jar"/>
              <library id="javax.ws.rs-api-2.0-m10.jar"/>
              <library id="json_simple-1.1.jar"/>
+             <library id="parquet-hadoop-bundle-1.6.0.jar"/>             
         </libraryNeededGroup>
 
         <!-- Spark Streaming group -->
