feat(TUP-25120)Merge nexus proxy setup

--- a/main/plugins/org.talend.repository.hadoopcluster/plugin.xml
+++ b/main/plugins/org.talend.repository.hadoopcluster/plugin.xml
@@ -79,8 +79,10 @@
          point="org.talend.core.runtime.service">
       <Service
             class="org.talend.repository.hadoopcluster.service.HadoopClusterService"
-            serviceId="IHadoopClusterService">
-      </Service>
+            serviceId="IHadoopClusterService" />
+      <Service
+            class="org.talend.repository.hadoopcluster.service.HadoopUiService"
+            serviceId="IHadoopUiService" />
    </extension>
    <extension
          point="org.eclipse.ui.navigator.navigatorContent">
