--- a/main/components_lib/talend-lineage-api/pom.xml
+++ b/main/components_lib/talend-lineage-api/pom.xml
@@ -1,191 +1,165 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>org.talend.libs.tbd.se</groupId>
-		<artifactId>talend-studio-se-parent</artifactId>
-		<version>${talend.lib.version}</version>
-	</parent>
+    <parent>
+        <groupId>org.talend.libs.tbd.se</groupId>
+        <artifactId>talend-studio-se-parent</artifactId>
+        <version>${talend.lib.version}</version>
+    </parent>
 
-	<artifactId>talend-lineage-api</artifactId>
-	<packaging>jar</packaging>
-	<version>0.1.1</version>
+    <artifactId>talend-lineage-api</artifactId>
+    <packaging>jar</packaging>
+    <version>0.2.1</version>
 
-	<name>talend-lineage-api</name>
-	<description>Talend BigData lineage API</description>
-	<url>http://www.talend.com</url>
+    <name>talend-lineage-api</name>
+    <description>Talend BigData lineage API</description>
+    <url>http://www.talend.com</url>
 
-	<repositories>
-		<repository>
-			<id>cloudera</id>
-			<url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
-		</repository>
-	</repositories>
+    <repositories>
+        <repository>
+            <id>cloudera</id>
+            <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
+        </repository>
+    </repositories>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<timestamp>${maven.build.timestamp}</timestamp>
-		<cloudera.navigator.version>1.0</cloudera.navigator.version>
-		<atlas.version>0.7-incubating</atlas.version>
-	</properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <timestamp>${maven.build.timestamp}</timestamp>
+        <cloudera.navigator.version>1.0</cloudera.navigator.version>
+        <atlas.version>0.7-incubating</atlas.version>
+        <cloudera.navigator.sdk.version>2.0</cloudera.navigator.sdk.version>
+    </properties>
 
-	<dependencies>
-	<!-- Using our navigator build : v2.0   2e26f1a -->
-		<dependency>
-			<groupId>org.talend.libraries</groupId>
-			<artifactId>navigator-sdk-client-2.0-20160624</artifactId>
-			<version>6.2.0</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.talend.libraries</groupId>
-			<artifactId>navigator-sdk-model-2.0-20160624</artifactId>
-			<version>6.2.0</version>
-		</dependency>
-	<!-- Using our navigator build : v2.0   2e26f1a -->
-	
-	<!-- Using last cloudera navigator sdk v2.0-SNAPSHOT
-		<dependency>
-			<groupId>com.cloudera.navigator</groupId>
-			<artifactId>navigator-sdk-client</artifactId>
-			<version>2.0-SNAPSHOT</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>com.cloudera.navigator</groupId>
-			<artifactId>navigator-sdk-model</artifactId>
-			<version>2.0-SNAPSHOT</version>
-		</dependency> -->
+    <dependencies>
 
-		<dependency>
-			<groupId>org.apache.atlas</groupId>
-			<artifactId>atlas-client</artifactId>
-			<version>${atlas.version}</version>
-		</dependency>
-		
-<!-- 		<dependency> -->
-<!-- 		    <groupId>joda-time</groupId> -->
-<!-- 		    <artifactId>joda-time</artifactId> -->
-<!-- 		    <version>2.4</version> -->
-<!-- 		</dependency> -->
-		
-               <!--  CLOUDERA NAVIGATOR INTEGRATION TESTS ONLY
-               <dependency>
-                   <groupId>org.reflections</groupId>
-                   <artifactId>reflections</artifactId>
-                   <version>0.9.10</version>
-               </dependency>
-               
-               <dependency>
-                   <groupId>org.springframework</groupId>
-                   <artifactId>spring-core</artifactId>
-                   <version>4.0.7.RELEASE</version>
-               </dependency>
-               
-               <dependency>
-                   <groupId>org.springframework</groupId>
-                   <artifactId>spring-web</artifactId>
-                   <version>4.0.7.RELEASE</version>
-               </dependency>
-               
-               <dependency>
-                   <groupId>com.fasterxml.jackson.core</groupId>
-                   <artifactId>jackson-databind</artifactId>
-                   <version>2.1.0</version>
-               </dependency>
-               
-               <dependency>
-                   <groupId>com.fasterxml.jackson.core</groupId>
-                   <artifactId>jackson-core</artifactId>
-                   <version>2.1.0</version>
-               </dependency>
-                              
-               <dependency>
-                   <groupId>com.fasterxml.jackson.datatype</groupId>
-                   <artifactId>jackson-datatype-joda</artifactId>
-                   <version>2.1.0</version>
-               </dependency>
-               
-               <dependency>
-                   <groupId>com.fasterxml.jackson.core</groupId>
-                   <artifactId>jackson-annotations</artifactId>
-                   <version>2.1.0</version>
-               </dependency>
-               
-               <dependency>
-                   <groupId>commons-net</groupId>
-                   <artifactId>commons-net</artifactId>
-                   <version>3.1</version>
-               </dependency> -->
-				
+        <dependency>
+            <groupId>com.cloudera.navigator</groupId>
+            <artifactId>navigator-sdk-client</artifactId>
+            <version>${cloudera.navigator.sdk.version}</version>
+        </dependency>
 
-		<!-- Testing only. -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-library</artifactId>
-			<version>1.3</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
-			<version>1.9.5</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.cloudera.navigator</groupId>
+            <artifactId>navigator-sdk-model</artifactId>
+            <version>${cloudera.navigator.sdk.version}</version>
+        </dependency>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.5.1</version>
-				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.4</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>test-jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-        		<groupId>org.apache.maven.plugins</groupId>
-        		<artifactId>maven-failsafe-plugin</artifactId>
-        		<version>2.13</version>
-        		<executions>
-          			<execution>
-            			<id>integration-test</id>
-            			<goals>
-              				<goal>integration-test</goal>
-            			</goals>
-          				</execution>
-          			<execution>
-            			<id>verify</id>
-            			<goals>
-              				<goal>verify</goal>
-            				</goals>
-          			</execution>
-        		</executions>
-      		</plugin>
-		</plugins>
-	</build>
+        <dependency>
+            <groupId>org.apache.atlas</groupId>
+            <artifactId>atlas-client</artifactId>
+            <version>${atlas.version}</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.10</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>4.0.7.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-joda</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-net</groupId>
+            <artifactId>commons-net</artifactId>
+            <version>3.1</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-library</artifactId>
+            <version>1.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.5</version>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>test-jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.13</version>
+                <executions>
+                    <execution>
+                        <id>integration-test</id>
+                        <goals>
+                            <goal>integration-test</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>verify</id>
+                        <goals>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
