--- a/main/plugins/org.talend.hadoop.distribution.dbr550/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.dbr550/plugin.xml
@@ -21,7 +21,7 @@
             context="plugin:org.talend.hadoop.distribution.dbr550"
             id="talend-bigdata-launcher-platform-1.4.2.jar"
             name="talend-bigdata-launcher-platform-1.4.2.jar"
-            mvn_uri="mvn:org.talend.libraries/talend-bigdata-launcher-platform/1.4.2">
+            mvn_uri="mvn:org.talend.libraries/talend-bigdata-launcher-platform-1.4.2/6.0.0">
         </libraryNeeded>
 		<libraryNeeded
             context="plugin:org.talend.hadoop.distribution.dbr550"
