--- a/main/plugins/org.talend.hadoop.distribution.dataproc14/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.dataproc14/plugin.xml
@@ -8,7 +8,7 @@
             context="plugin:org.talend.hadoop.distribution.dataproc14"
             id="talend-bigdata-launcher"
             name="talend-bigdata-launcher-platform-1.4.1.jar"
-            mvn_uri="mvn:org.talend.bigdata.libs/talend-bigdata-launcher-platform-1.4.1/6.0.0">
+            mvn_uri="mvn:org.talend.libraries/talend-bigdata-launcher-platform-1.4.2/6.0.0">
         </libraryNeeded>
         <libraryNeeded
 		    context="plugin:org.talend.hadoop.distribution.dataproc14"
