--- a/main/plugins/org.talend.hadoop.distribution.hdinsight340/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdinsight340/plugin.xml
@@ -291,6 +291,14 @@
             <library id="datanucleus-rdbms-3.2.9.jar"/>
         </libraryNeededGroup>
         
+         <!-- hd insight common libraries -->
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.hdinsight340"
+            id="cxf-core-3.3.4.jar"
+            name="cxf-core-3.3.4.jar"
+            mvn_uri="mvn:org.apache.cxf/cxf-core/3.3.4">
+        </libraryNeeded>
+       
         <!-- Spark Azure group MRREQUIRED 
              Azure Blob & Datalake support have been disabled for now on this distribution
              New versions of this distribution should be tested for Azure support and
