--- a/main/plugins/org.talend.hadoop.distribution.hdinsight360/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdinsight360/plugin.xml
@@ -37,9 +37,9 @@
         </libraryNeeded>
         <libraryNeeded
             context=""
-            id="javax.ws.rs-api-2.0-m10.jar"
-            name="javax.ws.rs-api-2.0-m10.jar"
-            mvn_uri="mvn:org.talend.libraries/javax.ws.rs-api-2.0-m10/6.0.0">
+            id="javax.ws.rs-api-2.1-6.0.0.jar"
+            name="javax.ws.rs-api-2.1-6.0.0.jar"
+            mvn_uri="mvn:org.talend.libraries/javax.ws.rs-api-2.1/6.0.0"/>
         </libraryNeeded>
         <libraryNeeded
               bundleID="org.apache.servicemix.bundles.wsdl4j"
@@ -297,7 +297,7 @@
             <library id="cxf-rt-frontend-jaxrs-3.3.4.jar" />
             <library id="cxf-rt-transports-http-3.3.4.jar" />
             <library id="json_simple-1.1.jar" />
-            <library id="javax.ws.rs-api-2.0-m10.jar" />
+            <library id="javax.ws.rs-api-2.1-6.0.0.jar" />
             <library id="wsdl4j-1.6.3.jar" />
             <library id="azure-storage-5.0.0.jar" />
             <library id="jackson-core-2.8.9.jar" />
