fix(TUP-26086) add default hadoop conf in product

--- a/main/plugins/org.talend.libraries.hadoop/build.properties
+++ b/main/plugins/org.talend.libraries.hadoop/build.properties
@@ -1,5 +1,5 @@
 bin.includes = META-INF/,\
                .,\
                lib/,\
-               lib/hadoop-core-1.0.0.jar
+               plugin.xml
 
