--- a/main/plugins/org.talend.libraries.hadoop/pom.xml
+++ b/main/plugins/org.talend.libraries.hadoop/pom.xml
@@ -9,4 +9,37 @@
   </parent>
   <artifactId>org.talend.libraries.hadoop</artifactId>
   <packaging>eclipse-plugin</packaging>
+  <build>
+		<plugins>
+			<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy-maven-repository</id>
+                        <phase>prepare-package</phase>
+						<goals>
+							<goal>copy</goal>
+						</goals>
+						<configuration>
+							<stripVersion>true</stripVersion>
+							<outputDirectory>${project.basedir}/lib</outputDirectory>
+							<artifactItems>
+								<artifactItem>
+									<groupId>org.talend.libraries</groupId>
+									<artifactId>hadoop-conf</artifactId>
+									<version>6.0.0</version>
+								</artifactItem>
+								<artifactItem>
+									<groupId>org.talend.libraries</groupId>
+									<artifactId>hadoop-conf-kerberos</artifactId>
+									<version>6.0.0</version>
+								</artifactItem>
+							</artifactItems>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+  </build>
 </project>
