--- a/main/plugins/org.talend.hadoop.distribution.emr550/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.emr550/plugin.xml
@@ -1534,8 +1534,8 @@
              <library id="commons-collections-3.2.2.jar"/>
              <library id="commons-io-2.4.jar"/>
              <library id="gson-2.2.4.jar"/>
-             <library id="httpcore-4.3.2.jar"/>
-             <library id="httpclient-4.3.4.jar"/>
+             <library id="httpcore-4.4.9.jar"/>
+             <library id="httpcore-4.5.5.jar"/>
              <library id="guava-14.0.1.jar"/>
              <library id="protobuf-java-2.5.0.jar"/>
              <library id="slf4j-api-1.7.16.jar"/>
@@ -1776,8 +1776,8 @@
 			<library id="hk2-locator-2.4.0-b34.jar"/>
 			<library id="hk2-utils-2.4.0-b34.jar"/>
 			<library id="htrace-core-3.1.0-incubating.jar"/>
-            <library id="httpcore-4.3.2.jar"/>
-            <library id="httpclient-4.3.4.jar"/>
+            <library id="httpcore-4.4.9.jar"/>
+            <library id="httpcore-4.5.5.jar"/>
 			<library id="ivy-2.4.0.jar"/>
 			<library id="jackson-annotations-2.6.7.jar"/>
 			<library id="jackson-core-2.6.7.jar"/>
@@ -2039,19 +2039,19 @@
       <!-- EMR 5.5.0 ClassLoaders -->
       <classloader
             index="HIVE2:AMAZON_EMR:EMR_5_5_0:STANDALONE"
-            libraries="antlr-runtime-3.4.jar;avro-1.7.7.jar;commons-cli-1.2.jar;commons-codec-1.4.jar;commons-collections-3.2.2.jar;commons-configuration-1.6.jar;commons-httpclient-3.0.1.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.2.jar;curator-client-2.6.0.jar;curator-framework-2.6.0.jar;datanucleus-api-jdo-4.2.1.jar;datanucleus-core-4.1.6.jar;datanucleus-rdbms-4.1.7.jar;derby-10.11.1.1.jar;emr-metrics-client-2.1.0.jar;gson-2.2.4.jar;guava-14.0.1.jar;hadoop-auth-2.7.3-amzn-2.jar;hadoop-common-2.7.3-amzn-2.jar;hadoop-hdfs-2.7.3-amzn-2.jar;hadoop-mapreduce-client-common-2.7.3-amzn-2.jar;hadoop-mapreduce-client-core-2.7.3-amzn-2.jar;hadoop-mapreduce-client-jobclient-2.7.3-amzn-2.jar;hadoop-yarn-api-2.7.3-amzn-2.jar;hadoop-yarn-client-2.7.3-amzn-2.jar;hadoop-yarn-common-2.7.3-amzn-2.jar;hive-exec-2.1.1-amzn-0-talend-nolang3.jar;hive-jdbc-2.1.1-amzn-0.jar;hive-metastore-2.1.1-amzn-0.jar;hive-serde-2.1.1-amzn-0.jar;hive-service-2.1.1-amzn-0.jar;htrace-core-3.1.0-incubating.jar;httpclient-4.3.4.jar;httpcore-4.3.2.jar;jdo-api-3.0.1.jar;libfb303-0.9.3.jar;libthrift-0.9.3.jar;log4j-1.2.17.jar;slf4j-api-1.7.10.jar;slf4j-log4j12-1.7.10.jar;zookeeper-3.4.8.jar">
+            libraries="antlr-runtime-3.4.jar;avro-1.7.7.jar;commons-cli-1.2.jar;commons-codec-1.4.jar;commons-collections-3.2.2.jar;commons-configuration-1.6.jar;commons-httpclient-3.0.1.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.2.jar;curator-client-2.6.0.jar;curator-framework-2.6.0.jar;datanucleus-api-jdo-4.2.1.jar;datanucleus-core-4.1.6.jar;datanucleus-rdbms-4.1.7.jar;derby-10.11.1.1.jar;emr-metrics-client-2.1.0.jar;gson-2.2.4.jar;guava-14.0.1.jar;hadoop-auth-2.7.3-amzn-2.jar;hadoop-common-2.7.3-amzn-2.jar;hadoop-hdfs-2.7.3-amzn-2.jar;hadoop-mapreduce-client-common-2.7.3-amzn-2.jar;hadoop-mapreduce-client-core-2.7.3-amzn-2.jar;hadoop-mapreduce-client-jobclient-2.7.3-amzn-2.jar;hadoop-yarn-api-2.7.3-amzn-2.jar;hadoop-yarn-client-2.7.3-amzn-2.jar;hadoop-yarn-common-2.7.3-amzn-2.jar;hive-exec-2.1.1-amzn-0-talend-nolang3.jar;hive-jdbc-2.1.1-amzn-0.jar;hive-metastore-2.1.1-amzn-0.jar;hive-serde-2.1.1-amzn-0.jar;hive-service-2.1.1-amzn-0.jar;htrace-core-3.1.0-incubating.jar;httpcore-4.5.5.jar;httpcore-4.4.9.jar;jdo-api-3.0.1.jar;libfb303-0.9.3.jar;libthrift-0.9.3.jar;log4j-1.2.17.jar;slf4j-api-1.7.10.jar;slf4j-log4j12-1.7.10.jar;zookeeper-3.4.8.jar">
       </classloader>
       <classloader
             index="MAP_REDUCE:AMAZON_EMR:EMR_5_5_0"
-            libraries="avro-1.7.5.jar;commons-cli-1.2.jar;commons-codec-1.4.jar;commons-collections-3.2.2.jar;commons-configuration-1.6.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;emr-metrics-client-2.1.0.jar;gson-2.2.4.jar;guava-11.0.2.jar;hadoop-auth-2.7.3-amzn-2.jar;hadoop-common-2.7.3-amzn-2.jar;hadoop-hdfs-2.7.3-amzn-2.jar;hadoop-mapreduce-client-common-2.7.3-amzn-2.jar;hadoop-mapreduce-client-core-2.7.3-amzn-2.jar;hadoop-mapreduce-client-jobclient-2.7.3-amzn-2.jar;hadoop-yarn-api-2.7.3-amzn-2.jar;hadoop-yarn-client-2.7.3-amzn-2.jar;hadoop-yarn-common-2.7.3-amzn-2.jar;htrace-core-3.1.0-incubating.jar;httpclient-4.3.4.jar;httpcore-4.3.2.jar;jackson-core-asl-1.9.14-TALEND.jar;jackson-jaxrs-1.9.13.jar;jackson-mapper-asl-1.9.14-TALEND.jar;jackson-xc-1.9.13.jar;jersey-client-1.9.jar;jersey-core-1.9.jar;jetty-util-6.1.26-emr.jar;jodd-core-3.5.2.jar;log4j-1.2.17.jar;parquet-hadoop-bundle-1.6.0.jar;protobuf-java-2.5.0.jar;servlet-api-2.5.jar;slf4j-api-1.7.10.jar;slf4j-log4j12-1.7.10.jar;snappy-java-1.1.2.6.jar">
+            libraries="avro-1.7.5.jar;commons-cli-1.2.jar;commons-codec-1.4.jar;commons-collections-3.2.2.jar;commons-configuration-1.6.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;emr-metrics-client-2.1.0.jar;gson-2.2.4.jar;guava-11.0.2.jar;hadoop-auth-2.7.3-amzn-2.jar;hadoop-common-2.7.3-amzn-2.jar;hadoop-hdfs-2.7.3-amzn-2.jar;hadoop-mapreduce-client-common-2.7.3-amzn-2.jar;hadoop-mapreduce-client-core-2.7.3-amzn-2.jar;hadoop-mapreduce-client-jobclient-2.7.3-amzn-2.jar;hadoop-yarn-api-2.7.3-amzn-2.jar;hadoop-yarn-client-2.7.3-amzn-2.jar;hadoop-yarn-common-2.7.3-amzn-2.jar;htrace-core-3.1.0-incubating.jar;httpcore-4.5.5.jar;httpcore-4.4.9.jar;jackson-core-asl-1.9.14-TALEND.jar;jackson-jaxrs-1.9.13.jar;jackson-mapper-asl-1.9.14-TALEND.jar;jackson-xc-1.9.13.jar;jersey-client-1.9.jar;jersey-core-1.9.jar;jetty-util-6.1.26-emr.jar;jodd-core-3.5.2.jar;log4j-1.2.17.jar;parquet-hadoop-bundle-1.6.0.jar;protobuf-java-2.5.0.jar;servlet-api-2.5.jar;slf4j-api-1.7.10.jar;slf4j-log4j12-1.7.10.jar;snappy-java-1.1.2.6.jar">
       </classloader>
       <classloader
             index="HDFS:AMAZON_EMR:EMR_5_5_0"
-            libraries="avro-1.7.5.jar;commons-cli-1.2.jar;commons-collections-3.2.2.jar;commons-configuration-1.6.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;emr-metrics-client-2.1.0.jar;gson-2.2.4.jar;guava-11.0.2.jar;hadoop-auth-2.7.3-amzn-2.jar;hadoop-common-2.7.3-amzn-2.jar;hadoop-hdfs-2.7.3-amzn-2.jar;htrace-core-3.1.0-incubating.jar;httpclient-4.3.4.jar;httpcore-4.3.2.jar;jackson-core-asl-1.9.14-TALEND.jar;jackson-jaxrs-1.9.13.jar;jackson-mapper-asl-1.9.14-TALEND.jar;jackson-xc-1.9.13.jar;jersey-core-1.9.jar;jetty-util-6.1.26-emr.jar;log4j-1.2.17.jar;protobuf-java-2.5.0.jar;servlet-api-2.5.jar;slf4j-api-1.7.10.jar;slf4j-log4j12-1.7.10.jar;jersey-client-1.9.jar">
+            libraries="avro-1.7.5.jar;commons-cli-1.2.jar;commons-collections-3.2.2.jar;commons-configuration-1.6.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;emr-metrics-client-2.1.0.jar;gson-2.2.4.jar;guava-11.0.2.jar;hadoop-auth-2.7.3-amzn-2.jar;hadoop-common-2.7.3-amzn-2.jar;hadoop-hdfs-2.7.3-amzn-2.jar;htrace-core-3.1.0-incubating.jar;httpcore-4.5.5.jar;httpcore-4.4.9.jar;jackson-core-asl-1.9.14-TALEND.jar;jackson-jaxrs-1.9.13.jar;jackson-mapper-asl-1.9.14-TALEND.jar;jackson-xc-1.9.13.jar;jersey-core-1.9.jar;jetty-util-6.1.26-emr.jar;log4j-1.2.17.jar;protobuf-java-2.5.0.jar;servlet-api-2.5.jar;slf4j-api-1.7.10.jar;slf4j-log4j12-1.7.10.jar;jersey-client-1.9.jar">
       </classloader>
       <classloader
             index="HDFS:AMAZON_EMR:EMR_5_5_0?USE_KRB"
-            libraries="avro-1.7.5.jar;commons-cli-1.2.jar;commons-collections-3.2.2.jar;commons-configuration-1.6.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;emr-metrics-client-2.1.0.jar;gson-2.2.4.jar;guava-11.0.2.jar;hadoop-auth-2.7.3-amzn-2.jar;hadoop-common-2.7.3-amzn-2.jar;hadoop-hdfs-2.7.3-amzn-2.jar;htrace-core-3.1.0-incubating.jar;httpclient-4.3.4.jar;httpcore-4.3.2.jar;jackson-core-asl-1.9.14-TALEND.jar;jackson-jaxrs-1.9.13.jar;jackson-mapper-asl-1.9.14-TALEND.jar;jackson-xc-1.9.13.jar;jersey-core-1.9.jar;jetty-util-6.1.26-emr.jar;log4j-1.2.17.jar;protobuf-java-2.5.0.jar;servlet-api-2.5.jar;slf4j-api-1.7.10.jar;slf4j-log4j12-1.7.10.jar;hadoop-conf-kerberos.jar;jersey-client-1.9.jar">
+            libraries="avro-1.7.5.jar;commons-cli-1.2.jar;commons-collections-3.2.2.jar;commons-configuration-1.6.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;emr-metrics-client-2.1.0.jar;gson-2.2.4.jar;guava-11.0.2.jar;hadoop-auth-2.7.3-amzn-2.jar;hadoop-common-2.7.3-amzn-2.jar;hadoop-hdfs-2.7.3-amzn-2.jar;htrace-core-3.1.0-incubating.jar;httpcore-4.5.5.jar;httpcore-4.4.9.jar;jackson-core-asl-1.9.14-TALEND.jar;jackson-jaxrs-1.9.13.jar;jackson-mapper-asl-1.9.14-TALEND.jar;jackson-xc-1.9.13.jar;jersey-core-1.9.jar;jetty-util-6.1.26-emr.jar;log4j-1.2.17.jar;protobuf-java-2.5.0.jar;servlet-api-2.5.jar;slf4j-api-1.7.10.jar;slf4j-log4j12-1.7.10.jar;hadoop-conf-kerberos.jar;jersey-client-1.9.jar">
       </classloader>
       <classloader
             index="HBASE:AMAZON_EMR:EMR_5_5_0"
