TBD-10095: fix for avro+javaapi

--- a/main/plugins/org.talend.hadoop.distribution.emr5150/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.emr5150/plugin.xml
@@ -298,9 +298,9 @@
         <!-- Sqoop libraries -->
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr5150"
-            id="sqoop-1.4.7.jar"
-            name="sqoop-1.4.7.jar"
-            mvn_uri="mvn:org.apache.sqoop/sqoop/1.4.7"/>
+            id="sqoop-emr515-uber.jar"
+            name="sqoop-emr515-uber.jar"
+            mvn_uri="mvn:org.talend.libraries/sqoop-emr515-uber/6.0.0"/>
 
         <!-- Tez -->
         <libraryNeeded
@@ -400,13 +400,6 @@
             mvn_uri="mvn:com.twitter/parquet-encoding/1.6.0">
         </libraryNeeded>
         
-        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.emr5150"
-            id="parquet-avro-1.8.2-shaded.jar"
-            name="parquet-avro-1.8.2-shaded.jar"
-            mvn_uri="mvn:org.talend.libraries/parquet-avro-1.8.2-shaded/6.0.0">
-        </libraryNeeded>
-
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr5150"
             id="parquet-avro-1.8.2-shaded.jar"
@@ -1986,10 +1979,8 @@
                 description="Sqoop libraries for EMR 5.15.0"
                 id="SQOOP-LIB-EMR_5_15_0_LATEST"
                 name="SQOOP-LIB-EMR_5_15_0_LATEST">
-            <library id="sqoop-1.4.7.jar"/>
-            <library id="avro-mapred-1.8.1.jar"/>
+            <library id="sqoop-emr515-uber.jar"/>
             <library id="commons-lang3-3.5.jar"/>
-            <library id="avro-1.8.1.jar"/>
         </libraryNeededGroup>
 
         <!-- Sqoop Parquet group -->
