fix(TDI-43810): Add ignore service attr checkbox for mongo and cosmosDB outputs

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages.properties
@@ -81,6 +81,7 @@ BULK_WRITE_TYPE.ITEM.ORDERED=Ordered
 BULK_WRITE_SIZE.NAME=Bulk write size
 
 CREATE_EMPTY_ELEMENT.NAME=Create empty element if needed
+IGNORE_SERVICE_ATTRIBUTES_FOR_EMPTY.NAME=Ignore service attributes for empty elements
 
 AUTHENTICATION.NAME=Authentication
 REQUIRED_AUTHENTICATION.NAME= Use authentication
