--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
         <module>main/plugins/org.talend.hadoop.distribution.emr5150</module>
         <module>main/plugins/org.talend.hadoop.distribution.hdinsight340</module>
         <module>main/plugins/org.talend.hadoop.distribution.hdinsight360</module>
+        <module>main/plugins/org.talend.hadoop.distribution.hdinsight400</module>
         <module>main/plugins/org.talend.hadoop.distribution.hdp250</module>
         <module>main/plugins/org.talend.hadoop.distribution.hdp260</module>
         <module>main/plugins/org.talend.hadoop.distribution.hdpx</module>
@@ -109,6 +110,7 @@
         <module>test/plugins/org.talend.hadoop.distribution.emr5150.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.hdinsight340.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.hdinsight360.test</module>
+        <module>test/plugins/org.talend.hadoop.distribution.hdinsight400.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.hdp250.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.hdp260.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.mapr500.test</module>
